--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ Homepage = "https://github.com/repo-helper/repo_helper_rtd"
 Documentation = "https://repo_helper_rtd.readthedocs.io/en/latest"
 
 [tool.importcheck]
-always = [ "repo_helper_rtd",]
+always = [ "repo_helper_rtd", "repo_helper_rtd.cli", "repo_helper_rtd.options",]
 
 [tool.mkrecipe]
 conda-channels = [ "repo-helper",]
