--- a/tox.ini
+++ b/tox.ini
@@ -38,7 +38,7 @@ basepython = python3.8
 pip_version = pip>=21
 changedir = {toxinidir}/doc-source
 deps = -r{toxinidir}/doc-source/requirements.txt
-commands = sphinx-build -M html . ./build {posargs}
+commands = sphinx-build -M {env:SPHINX_BUILDER:html} . ./build {posargs}
 
 [testenv:build]
 skip_install = True
@@ -82,7 +82,7 @@ commands = python3 -m flake8_rst_docstrings_sphinx repo_helper_rtd --allow-toolb
 basepython = python3.6
 ignore_errors = True
 changedir = {toxinidir}
-deps = mypy==0.812
+deps = mypy==0.910
 commands = mypy repo_helper_rtd {posargs}
 
 [testenv:pyup]
