--- a/tox.ini
+++ b/tox.ini
@@ -82,7 +82,9 @@ commands = python3 -m flake8_rst_docstrings_sphinx repo_helper_rtd --allow-toolb
 basepython = python3.6
 ignore_errors = True
 changedir = {toxinidir}
-deps = mypy==0.910
+deps =
+    mypy==0.910
+    types-requests
 commands = mypy repo_helper_rtd {posargs}
 
 [testenv:pyup]
