--- a/repo_helper.yml
+++ b/repo_helper.yml
@@ -15,6 +15,7 @@ enable_conda: False
 enable_tests: False
 sphinx_html_theme: furo
 mypy_version: "0.910"
+docs_fail_on_warning: true
 
 entry_points:
  repo_helper.command:
