--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,9 +64,8 @@ extensions = [
     "seed_intersphinx_mapping",
     "html_section",
     "sphinx_click",
-    "sphinx_toolbox_experimental.html_section",
-    "sphinx_toolbox_experimental.autosummary_widths",
-    "sphinx_toolbox_experimental.needspace",
+    "sphinx_toolbox.more_autosummary.column_widths",
+    "sphinx_toolbox.latex",
 ]
 sphinxemoji_style = "twemoji"
 gitstamp_fmt = "%d %b %Y"
