--- a/tox.ini
+++ b/tox.ini
@@ -13,7 +13,7 @@
 #     * pytest
 
 [tox]
-envlist = py36, py37, py38, py39, py310-dev, mypy, build
+envlist = py36, py37, py38, py39, py310, py311-dev, mypy, build
 skip_missing_interpreters = True
 isolated_build = True
 requires =
@@ -21,7 +21,7 @@ requires =
     tox-envlist>=0.2.1
 
 [envlists]
-test = py36, py37, py38, py39, py310-dev
+test = py36, py37, py38, py39, py310, py311-dev
 qa = mypy, lint
 
 [testenv]
