--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ always = [ "repo_helper_rtd", "repo_helper_rtd.cli", "repo_helper_rtd.options",]
 
 [tool.whey]
 base-classifiers = []
-python-versions = [ "3.6", "3.7", "3.8", "3.9", "3.10",]
+python-versions = [ "3.6", "3.7", "3.8", "3.9", "3.10", "3.11",]
 python-implementations = [ "CPython",]
 platforms = [ "Windows", "macOS", "Linux",]
 license-key = "MIT"
