--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,7 @@
 #     * testenv
 #     * testenv:.package
 #     * testenv:py313-dev
+#     * testenv:py313
 #     * testenv:py312-dev
 #     * testenv:py312
 #     * testenv:docs
@@ -18,7 +19,7 @@
 #     * pytest
 
 [tox]
-envlist = py36, py37, py38, py39, py310, py311, py313-dev, mypy, build
+envlist = py36, py37, py38, py39, py310, py311, py312, py313, mypy, build
 skip_missing_interpreters = True
 isolated_build = True
 requires =
@@ -28,7 +29,7 @@ requires =
     virtualenv!=20.16.0
 
 [envlists]
-test = py36, py37, py38, py39, py310, py311, py313-dev
+test = py36, py37, py38, py39, py310, py311, py312, py313
 qa = mypy, lint
 
 [testenv]
@@ -46,11 +47,18 @@ setenv =
     PYTHONDEVMODE=1
     PIP_DISABLE_PIP_VERSION_CHECK=1
 
-[testenv:py313-dev]
+[testenv:py313]
+download = True
 setenv =
     PYTHONDEVMODE=1
     PIP_DISABLE_PIP_VERSION_CHECK=1
     UNSAFE_PYO3_SKIP_VERSION_CHECK=1
+
+[testenv:py312]
+download = True
+setenv =
+    PYTHONDEVMODE=1
+    PIP_DISABLE_PIP_VERSION_CHECK=1
 
 [testenv:docs]
 setenv = SHOW_TODOS = 1
