Drop support for Python 3.6

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ always = [ "repo_helper_rtd", "repo_helper_rtd.cli", "repo_helper_rtd.options",]
 
 [tool.whey]
 base-classifiers = []
-python-versions = [ "3.6", "3.7", "3.8", "3.9", "3.10", "3.11", "3.12", "3.13",]
+python-versions = [ "3.7", "3.8", "3.9", "3.10", "3.11", "3.12", "3.13",]
 python-implementations = [ "CPython",]
 platforms = [ "Windows", "macOS", "Linux",]
 license-key = "MIT"
