--- a/tox.ini
+++ b/tox.ini
@@ -19,7 +19,7 @@
 #     * pytest
 
 [tox]
-envlist = py36, py37, py38, py39, py310, py311, py312, py313, mypy, build
+envlist = py37, py38, py39, py310, py311, py312, py313, mypy, build
 skip_missing_interpreters = True
 isolated_build = True
 requires =
@@ -29,7 +29,7 @@ requires =
     virtualenv!=20.16.0
 
 [envlists]
-test = py36, py37, py38, py39, py310, py311, py312, py313
+test = py37, py38, py39, py310, py311, py312, py313
 qa = mypy, lint
 
 [testenv]
@@ -160,7 +160,7 @@ inline-quotes = "
 multiline-quotes = """
 docstring-quotes = """
 count = True
-min_python_version = 3.6.1
+min_python_version = 3.7
 unused-arguments-ignore-abstract-functions = True
 unused-arguments-ignore-overload-functions = True
 unused-arguments-ignore-magic-methods = True
